# departure-board

./: .gitignore  README.md
esp32-lcd-board/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c6
esp32-lcd-board/include/: config.h  lcd_driver.h  lv_conf.h  rgb_led.h  sd_card.h  settings.h  tfnsw_client.h  web_server.h  wifi_manager.h
esp32-lcd-board/src/: CMakeLists.txt  lcd_driver.c  main.c  rgb_led.c  sd_card.c  settings.c  tfnsw_client.c  web_server.c  wifi_manager.c
